src/test/ui/macros/macro-path-prelude-shadowing.stderr
error[E0659]: `std` is ambiguous (glob import vs any other name from outer scope during import/macro resolution)
  --> $DIR/macro-path-prelude-shadowing.rs:29:9
   |
LL |         std::panic!();
   |         ^^^ ambiguous name
   |
   = note: `std` could refer to a built-in extern crate
note: `std` could also refer to the module imported here
  --> $DIR/macro-path-prelude-shadowing.rs:27:9
   |
LL |     use m2::*; // glob-import user-defined `std`
   |         ^^^^^
   = help: consider adding an explicit import of `std` to disambiguate
   = help: or use `self::std` to refer to this module unambiguously

error: aborting due to previous error

For more information about this error, try `rustc --explain E0659`.
